# twitter_clone_backend

./: compose.yml  pyproject.toml
twitter_clone_backend/: Dockerfile  database.py  pyproject.toml
twitter_clone_backend/twitter_clone_backend/: database.py  main.py
